--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,16 @@
   <meta charset="utf-8">
 
   <!-- Make the page mobile compatible -->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport"
+  content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
+  />
 
   <!-- Allow installing the app to the homescreen -->
   <meta name="mobile-web-app-capable" content="yes">
 
   <link rel="icon" href="/favicon.ico" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <title>React.js Boilerplate</title>
 </head>
 
