--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,8 @@
   <link rel="icon" href="/favicon.ico" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <title>React.js Boilerplate</title>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <title>Demo React-boilerplate</title>
 </head>
 
 <body>
